<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        android:layout_marginTop="31dp"
        android:gravity="start"

        android:text="@string/log_in"
        android:textSize="20dp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="270dp"

        android:background="@null" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_log_in_text_input_layout_username"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"

        android:layout_marginRight="20dp"
        android:hint="@string/account_log_in_username"
        app:layout_constraintEnd_toEndOf="@+id/view"

        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/account_log_in_text_input_layout_password"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"

        android:layout_marginRight="20dp"
        android:hint="@string/account_log_in_password"
        app:layout_constraintEnd_toEndOf="@+id/view"

        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/account_log_in_button_log_in"
        android:layout_width="0dp"

        android:layout_height="40dp"

        android:layout_marginRight="20dp"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="20dp"

        android:background="@drawable/button_background"
        android:gravity="center"

        android:text="@string/account_log_in_log_in_2"

        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintRight_toRightOf="@id/view"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/account_log_in_button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/button_background"

        android:text="@string/account_log_in_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>