<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:scrollbars="none"
    android:id="@+id/main">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="31dp"
            android:gravity="start"

            android:text="@string/account"
            android:textSize="20dp"

            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:background="@drawable/rounded_background"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/text_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginLeft="30dp"

            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:text="@string/username"

            app:layout_constraintLeft_toLeftOf="@id/view"
            app:layout_constraintRight_toLeftOf="@id/main_text_username"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <TextView
            android:id="@+id/main_text_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginLeft="15dp"

            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:text="not authorized"

            app:layout_constraintLeft_toRightOf="@id/text_1"
            app:layout_constraintRight_toRightOf="@id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_button_log_in"
            android:layout_width="0dp"
            android:layout_height="40dp"

            android:layout_marginLeft="30dp"

            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"

            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="Log in"

            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintLeft_toLeftOf="@id/view"
            app:layout_constraintRight_toLeftOf="@id/main_button_register" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_button_register"
            android:layout_width="0dp"
            android:layout_height="40dp"

            android:layout_marginLeft="15dp"

            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"

            android:background="@drawable/button_background"
            android:gravity="center"
            android:text="Register"

            app:layout_constraintBottom_toBottomOf="@id/view"
            app:layout_constraintLeft_toRightOf="@id/main_button_log_in"
            app:layout_constraintRight_toRightOf="@id/view" />

        <TextView
            android:id="@+id/textView2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="20dp"
            android:layout_marginTop="26dp"

            android:gravity="start"
            android:text="@string/face"
            android:textSize="20dp"

            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"

            android:layout_height="180dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:background="@drawable/rounded_background"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/text_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"

            android:text="@string/name"

            app:layout_constraintLeft_toLeftOf="@id/view2"
            app:layout_constraintRight_toLeftOf="@id/main_text_name"
            app:layout_constraintTop_toTopOf="@+id/view2" />

        <TextView
            android:id="@+id/main_text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"

            android:text="no"

            app:layout_constraintLeft_toRightOf="@id/text_3"
            app:layout_constraintRight_toRightOf="@id/view2"
            app:layout_constraintTop_toTopOf="@+id/view2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_button_management"
            android:layout_width="0dp"
            android:layout_height="40dp"

            android:layout_marginLeft="30dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="30dp"

            android:background="@drawable/button_background"
            android:gravity="center"

            android:text="@string/control"
            app:layout_constraintBottom_toBottomOf="@id/view2"
            app:layout_constraintLeft_toLeftOf="@id/view2"

            app:layout_constraintRight_toLeftOf="@id/main_button_register_face" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_button_register_face"
            android:layout_width="0dp"
            android:layout_height="40dp"

            android:layout_marginLeft="15dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"


            android:background="@drawable/button_background"
            android:gravity="center"

            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="@id/view2"
            app:layout_constraintLeft_toRightOf="@id/main_button_management"

            app:layout_constraintRight_toRightOf="@id/view2" />

        <TextView

            android:id="@+id/textView3"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"

            android:layout_marginTop="26dp"
            android:gravity="start"
            android:text="@string/executing_queries"

            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <View
            android:id="@+id/view3"

            android:layout_width="match_parent"
            android:layout_height="180dp"

            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:background="@drawable/rounded_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/text_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"

            android:text="@string/status"

            app:layout_constraintLeft_toLeftOf="@id/view3"
            app:layout_constraintRight_toLeftOf="@id/main_text_status"
            app:layout_constraintTop_toTopOf="@+id/view3" />

        <TextView
            android:id="@+id/main_text_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"

            android:text="Ready to work"

            app:layout_constraintLeft_toRightOf="@id/text_4"
            app:layout_constraintRight_toRightOf="@id/view3"
            app:layout_constraintTop_toTopOf="@+id/view3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_button_start_stop"
            android:layout_width="0dp"
            android:layout_height="40dp"

            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"

            android:background="@drawable/button_background"
            android:text="@string/strart"

            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintStart_toStartOf="@+id/view3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout >